CostalCloud/force-app/main/default/objects/TCS_WorkOrders_No_Store__c.object
<CustomObject>
    <fields>
        <fullName>Integration_Key__c</fullName>
        <externalId>true</externalId>
        <label>Integration Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Target_Map_Data__c</fullName>
        <label>SF Target Map Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Store_No__c</fullName>
        <label>Store No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCS_Data__c</fullName>
        <label>TCS Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>TCS WorkOrders No Store</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TCS WorkOrders with No Stores Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TCS WorkOrders No Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>